Project 1 max-width given

--- a/Html_and_ CSS_Assignments/Project 1/index.html
+++ b/Html_and_ CSS_Assignments/Project 1/index.html
@@ -34,11 +34,13 @@
               <li class="list-item">Portfolio</li>
               <li class="list-item">Pricing</li>
             </ul>
+
+            <div class="button-group">
+              <button class="nav-button">Contact Us</button>
+            </div>
           </div>
 
-          <div class="button-group">
-            <button class="nav-button">Contact Us</button>
-          </div>
+         
 
           <i class="fa-solid fa-bars-staggered"></i>
         </nav>
@@ -47,9 +49,9 @@
       <!--LEFT SECTION  -->
       <!-- Banner -->
       <section aria-label="banner">
-        <div class="banner-container">
+        <div class="banner-container">  
           <!-- Left text -->
-          <div>
+          <div   class="leftSection">
             <h1 class="heading-text">
               We Help You <span>Crush</span> Your Competition
             </h1>
