banner image width resolve

--- a/Html_and_ CSS_Assignments/Project 6/index.html
+++ b/Html_and_ CSS_Assignments/Project 6/index.html
@@ -25,7 +25,7 @@
         <!-- LEFT SECTION -->
         <section  class="left">
             <h1>Your Justice is <br>Our Top Priority</h1>
-            <p>As a state of law,maintaining justice is <br>something that every citizen must pay <br> attention to,and we are here to uphold justice <br>for you</p>
+            <p>As a state of law,maintaining justice is <br>something that every citizen must pay <br> attention to,and we are here to uphold <br> justice for you</p>
         </section>
         <!-- RIGHT SECTION -->
         <section   class="right">
