max-width given

--- a/Html_and_ CSS_Assignments/Project8/index.html
+++ b/Html_and_ CSS_Assignments/Project8/index.html
@@ -53,7 +53,7 @@
     </aside>
 
     <!-- ARTICLE   1111-->
-    <article>
+    <article  class="firstArticle">
        <div  class="description">
         <h1    class="textBlack">The best services especially for you</h1>
         <p     class="textGrey   textDarkGrey">We will serve you best we can with the aim of providing satisfaction to you.</p>
@@ -79,7 +79,7 @@
         </div>
     </article>
 
-     <!-- ARTICLE   1111-->
+     <!-- ARTICLE   2222-->
     <article  class="secondArticle">
         <h1    class="textBlack">We are ready to support your business <br>
             needs to be more advanced</h1>
@@ -157,7 +157,8 @@
     </article>
 
     <!-- PRICING SECTION -->
-    <figure>
+    <figure  id="pricingSection">
+
         <div    class="headers">
             <div><img src="./icons/arrow-left.svg" alt=""></div>
             <h1   class="figureTextWhite">Hosting your website with the <br> services we provide</h1>
@@ -309,7 +310,7 @@
     <summary>
       
         <div  class="summaryUpper">
-            <h1   class="textBlack">What do our customers say?</h1>
+            <h1   class="textBlack">What do our br customers say?</h1>
             <p   class="textGrey">You will definitely be surprised how our customers comment on what we do so well. because we really prioritize the satisfaction of our customers</p>
         </div>
 
@@ -378,14 +379,14 @@
     <footer>
 
         <h1  class="footerHeading">
-            Sine up now for as much hosting and <br> domain as you want for $20.99/year
+            Sign up now for as much hosting and <br> domain as you want for $20.99/year
         </h1>
 
         <div  class="btnContainer">
             <button class="greyBtn">Name</button>
             <button class="greyBtn">Email id</button>
             <button class="greyBtn">Password</button>
-            <button class="skyBlueBtn">Sine up</button>
+            <button class="skyBlueBtn">Sign up</button>
         </div>
 
         <div  class="greyLine"></div>
