max-width given

--- a/Html_and_ CSS_Assignments/Project8/index.html
+++ b/Html_and_ CSS_Assignments/Project8/index.html
@@ -310,7 +310,7 @@
     <summary>
       
         <div  class="summaryUpper">
-            <h1   class="textBlack">What do our br customers say?</h1>
+            <h1   class="textBlack">What do our customers say?</h1>
             <p   class="textGrey">You will definitely be surprised how our customers comment on what we do so well. because we really prioritize the satisfaction of our customers</p>
         </div>
 
