max-width given

--- a/Html_and_ CSS_Assignments/Project11/index.html
+++ b/Html_and_ CSS_Assignments/Project11/index.html
@@ -32,7 +32,7 @@
                     <li>Product</li>
                 </ul>
     
-                <button class="btn">Shop Now</button>
+                <button class="btn">Shop</button>
             </nav>
 
             <!-- BELOW  NAVBAR -->
@@ -133,7 +133,7 @@
 
             <!-- LOWER SECTION CASE LEFT SECTION -->
             <section   class="leftSection">
-                <img src="./Photos/caseImage.png" alt="">
+                <img src="./Photos/caseImage.png" alt=""   width="280px">
             </section>
 
             <!--  LOWER SECTION CASE RIGHT SECTION  -->
